fix(counter): counter and toolbar overlap in RTL layout (fix #394)

--- a/src/plugins/counter/counter.scss
+++ b/src/plugins/counter/counter.scss
@@ -16,4 +16,9 @@
   padding: localVar(padding, common.globalVar(button_padding, common.$icon-button-padding));
   line-height: localVar(line_height, common.globalVar(icon_size, common.$icon-size));
   user-select: localVar(user_select, none);
+
+  [dir="rtl"] & {
+    left: localVar(rtl_left, unset);
+    right: localVar(rtl_right, 0);
+  }
 }
